[package]
name = "nxrm_two_portal"
version = "0.1.0"
edition = "2021"
description = "Translate the subset of the NXRM2 API into the new Central Portal Publisher API"

[dependencies]
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["json", "tracing", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
base64 = "0.22.0"
color-eyre = "0.6.3"
config = "0.14.0"
ex_em_ell = "0.2.0"
eyre = "0.6.12"
futures = "0.3.30"
itertools = "0.12.1"
mime = "0.3.17"
portal_api = { path = "../portal_api" }
repository = { path = "../repository" }
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "fs", "rt-multi-thread", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
