[package]
name = "nxrm_two_portal"
version = "0.1.0"
edition = "2021"
description = "Translate the subset of the NXRM2 API into the new Central Portal Publisher API"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["json", "tracing", "macros"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
color-eyre = "0.6.3"
config = "0.14.0"
ex_em_ell = "0.3.0"
eyre = "0.6.12"
futures = "0.3.31"
itertools = "0.13.0"
mime = "0.3.17"
portal_api = { path = "../portal_api" }
repository = { path = "../repository" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "fs", "rt-multi-thread", "tracing"] }
tower-http = { version = "0.6.1", features = ["timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
user_auth = { path = "../user_auth" }
