[package]
name = "portal_api"
version = "0.1.0"
edition = "2021"
description = "API Client for the Maven Central Publisher Portal"

[dependencies]
base64 = "0.21.5"
eyre = "0.6.11"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1.0.194", features = ["derive"] }
tokio = { version = "1.35.1", features = ["fs"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
url = "2.5.0"

[dev-dependencies]
clap = { version = "4.4.17", features = ["derive"] }
promptly = "0.3.1"
rpassword = "7.3.1"
serde_json = "1.0.110"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
wiremock = "0.5.22"
