[package]
name = "portal_api"
version = "0.1.0"
edition = "2021"
description = "API Client for the Maven Central Publisher Portal"

[dependencies]
base64 = "0.22.1"
eyre = "0.6.12"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.39.3", features = ["fs", "tracing"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
url = "2.5.2"

[dev-dependencies]
clap = { version = "4.5.16", features = ["derive"] }
promptly = "0.3.1"
rpassword = "7.3.1"
serde_json = "1.0.126"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
wiremock = "0.6.1"
