[package]
name = "repository"
version = "0.1.0"
edition = "2021"

[features]
default = ["local"]
local = []

[dependencies]
async-trait = "0.1.80"
async-walkdir = "1.0.0"
bytes = "1.6.0"
eyre = "0.6.12"
futures = "0.3.30"
path-absolutize = "3.1.1"
temp-dir = "0.1.13"
tokio = { version = "1.37.0", features = ["fs", "tracing"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tracing = "0.1.40"
zip = { version = "1.2.3", default-features = false, features = ["deflate", "deflate-zopfli", "bzip2", "time", "zstd"] }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
