[package]
name = "user_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
jwt-simple =  "0.12.10"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros", "fs", "rt-multi-thread", "tracing"] }
tracing = "0.1.40"
